<resources>
    <string name="app_name">module_home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="publicsearchstring">搜索关键字/基金/公司/经理</string>
    <string name="search">搜索</string>
    <string name="fundpro">基金产品</string>
    <string name="fundmanger">基金经理</string>
    <string name="fundcom">基金公司</string>
    <string name="historysearch">历史搜索</string>
    <string name="hotsearch">热门搜索</string>
    <string name="find">发现</string>
    <string name="seemore">查看更多>></string>
    <string name="publicplacement">公募</string>
    <string name="privateplacement">私募</string>
    <string name="bankfinancing">银行理财</string>
    <string name="fundportfolio">基金组合</string>
</resources>
