<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data></data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        >
        <include
            android:id="@+id/publictop"
            layout="@layout/activitytop"></include>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="15dp"
                >
                <android.support.v7.widget.SearchView
                    android:id="@+id/publicsearchview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:iconifiedByDefault="false"
                    app:queryHint="@string/publicsearchstring"
                    android:background="@drawable/publicsoubg"
                    app:searchIcon="@mipmap/souicon"
                    android:layout_marginLeft="15dp"
                    android:layout_toLeftOf="@+id/publicmainsou"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:singleLine="true"
                    >
                </android.support.v7.widget.SearchView>
                <TextView
                    android:id="@+id/publicmainsou"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/search"
                    android:gravity="center"
                    android:background="@drawable/publicsoung_r"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/white"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:paddingLeft="13dp"
                    android:paddingRight="13dp"
                    />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/publicoka"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    >
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:text="@string/fundpro"
                        android:drawableTop="@mipmap/fundproimg"
                        android:gravity="center"
                        android:drawablePadding="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/huicolor"
                        />
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:text="@string/fundmanger"
                        android:drawableTop="@mipmap/fundmangerimg"
                        android:gravity="center"
                        android:drawablePadding="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/huicolor"
                        />
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:button="@null"
                        android:text="@string/fundcom"
                        android:drawableTop="@mipmap/fundcomimg"
                        android:gravity="center"
                        android:drawablePadding="5dp"
                        android:textSize="14sp"
                        android:textColor="@color/huicolor"
                        />
                </RadioGroup>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/publicmianviewcolor"
                    android:layout_marginTop="20dp"
                    ></View>
                <LinearLayout
                    android:id="@+id/historylin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:button="@null"
                            android:text="@string/historysearch"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="5dp"
                            />
                        <ImageView
                            android:id="@+id/publichistorydelete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/histoerdele"
                            android:layout_alignParentRight="true"
                            android:paddingRight="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            />
                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/publichistoryHotRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        >
                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

                <RadioButton
                    android:id="@+id/hottext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:button="@null"
                    android:text="@string/find"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="5dp"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/HotRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hottext">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/publicokb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <android.support.design.widget.TabLayout
                    android:id="@+id/publicmaintablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabIndicatorFullWidth="false"
                    app:tabIndicatorColor="@color/red"
                    app:tabBackground="@android:color/transparent"
                    android:background="@null"
                    ></android.support.design.widget.TabLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/publicmianviewcolor"
                    android:layout_below="@+id/baseback"
                    ></View>
                <android.support.v4.view.ViewPager
                    android:id="@+id/publicmainviewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v4.view.ViewPager>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>