<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ScrollView
        android:id="@+id/wdln"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:overScrollMode="never"
        android:scrollbars="none"
        >
        <android.support.constraint.ConstraintLayout
            android:id="@+id/lingsssss"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:id="@+id/homelogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"
                android:layout_marginTop="85dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <ImageView
                android:id="@+id/homes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/homelogo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@mipmap/homesou"
                android:layout_marginTop="26dp"
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/homes"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp"
                >
                <RadioButton
                    android:id="@+id/cemetery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@mipmap/cemetery"
                    android:background="@null"
                    android:button="@null"
                    android:text="@string/publicplacement"
                    android:gravity="center"
                    android:drawablePadding="6dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/homes"
                    app:layout_constraintLeft_toLeftOf="parent"
                    />
                <RadioButton
                    android:id="@+id/private_placement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:drawableTop="@mipmap/private_placement"
                    android:background="@null"
                    android:button="@null"
                    android:text="@string/privateplacement"
                    android:gravity="center"
                    android:drawablePadding="6dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/homes"
                    app:layout_constraintLeft_toRightOf="@+id/cemetery"
                    />
                <RadioButton
                    android:id="@+id/bank_financing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:drawableTop="@mipmap/bank_financing"
                    android:background="@null"
                    android:button="@null"
                    android:text="@string/bankfinancing"
                    android:gravity="center"
                    android:drawablePadding="6dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/homes"
                    app:layout_constraintLeft_toRightOf="@+id/private_placement"
                    />
                <RadioButton
                    android:id="@+id/fund_portfolio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:drawableTop="@mipmap/fund_portfolio"
                    android:background="@null"
                    android:button="@null"
                    android:text="@string/fundportfolio"
                    android:gravity="center"
                    android:drawablePadding="6dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/homes"
                    app:layout_constraintLeft_toRightOf="@+id/bank_financing"
                    />
            </RadioGroup>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>