<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
   <com.guoshi.baselib.layout.LoadDataLayout
       android:id="@+id/ldl"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
      <ScrollView
          android:id="@+id/seekokview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:overScrollMode="never"
          android:scrollbars="none"
          >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                >
               <TextView
                   android:layout_width="5dp"
                   android:layout_height="20dp"
                   android:background="@color/appcolor"
                   />
               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@null"
                   android:button="@null"
                   android:text="@string/fundpro"
                   android:textColor="@color/black"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   android:gravity="center"
                   android:layout_marginLeft="5dp"
                   />
            </LinearLayout>
            <com.guoshi.baselib.layout.LoadDataLayout
                android:id="@+id/ldlporduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
               <android.support.v7.widget.RecyclerView
                   android:id="@+id/fund_porductRecyclerView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="15dp"
                   >

               </android.support.v7.widget.RecyclerView>
            </com.guoshi.baselib.layout.LoadDataLayout>
            <TextView
                android:id="@+id/porduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seemore"
                android:layout_marginLeft="10dp"
                android:textColor="@color/huicolor"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/viewcolor"
                android:layout_marginTop="10dp"
                ></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                >
               <TextView
                   android:layout_width="5dp"
                   android:layout_height="20dp"
                   android:background="@color/appcolor"
                   />
               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@null"
                   android:button="@null"
                   android:text="@string/fundcom"
                   android:textColor="@color/black"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   android:gravity="center"
                   android:layout_marginLeft="5dp"
                   />
            </LinearLayout>
            <com.guoshi.baselib.layout.LoadDataLayout
                android:id="@+id/ldlcompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
               <android.support.v7.widget.RecyclerView
                   android:id="@+id/fund_companyRecyclerView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="15dp"
                   >

               </android.support.v7.widget.RecyclerView>
            </com.guoshi.baselib.layout.LoadDataLayout>

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seemore"
                android:layout_marginLeft="10dp"
                android:textColor="@color/huicolor"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/viewcolor"
                android:layout_marginTop="10dp"
                ></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                >
               <TextView
                   android:layout_width="5dp"
                   android:layout_height="20dp"
                   android:background="@color/appcolor"
                   />
               <RadioButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@null"
                   android:button="@null"
                   android:text="@string/fundmanger"
                   android:textColor="@color/black"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   android:gravity="center"
                   android:layout_marginLeft="5dp"
                   />
            </LinearLayout>
            <com.guoshi.baselib.layout.LoadDataLayout
                android:id="@+id/ldlmanger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
               <android.support.v7.widget.RecyclerView
                   android:id="@+id/fund_fundmangerRecyclerView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="10dp"
                   android:layout_marginRight="15dp"
                   >

               </android.support.v7.widget.RecyclerView>
            </com.guoshi.baselib.layout.LoadDataLayout>

            <TextView
                android:id="@+id/fundmanger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seemore"
                android:layout_marginLeft="10dp"
                android:textColor="@color/huicolor"
                android:layout_marginBottom="20dp"
                />
         </LinearLayout>
      </ScrollView>

   </com.guoshi.baselib.layout.LoadDataLayout>

</layout>